Fix UI issues, add Error Boundary, and robust API fallbacks for backend errors